tests/src/frontend/typechecking/invalid/late_static3.sk
base class Foo {
  static fun abs(): void;
  deferred static fun bad(): void {
    static::abs()
  }
}

fun main(): void {
  Foo::bad();
  print_raw("Fail")
}
